welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:2: error: not found: value sortietrouvee
while (sortietrouvee()=false){
       ^